# clinical-safety-agent

./: .agents-cli-spec.md  .gitignore  AGENTS.md  README.md  agents-cli-manifest.yaml  docker-compose.yml  pyproject.toml  query.ps1  req-eval-1.json  req-eval-4.json  req-fill.json  req-list.json  req-nav-1.json  req-nav-3.json  req-perplex.json  req-snap-1.json  snap1.json
.agents/: AGENTS.md
.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
backend/: .env.example  app.js  package-lock.json  package.json  server.js
discharge_agent/: .env.example  agent.py  schemas.py  tools.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
mcp-server/: README.md  package-lock.json  package.json
scratch/: check_patient.json  click_05.json  click_05_explicit.json  click_06.json  commit_script.sh  commit_script2.sh  fill_05.js  fill_06.js  fill_patient.json  gen_req_05.js  gen_req_06.js  kaggle_evaluate.json  kaggle_snapshot.json  kaggle_text.txt  nav_05.json  nav_06.json  network.json  req-click.json  req-evaluate.json  req-navigate.json  req-screenshot.json  req-snapshot.json  req_fill_05.json  req_fill_06.json  results_1.json  results_2.json  results_3.json  results_4.json  results_5.json  results_raw.json  run_debug.py  run_debug2.py  run_final.py  run_final2.py  run_final3.py  run_test_script.py  run_webbridge.py  run_webbridge_curl.py  set_mrn.json  set_mrn_06.json  (+26 more)
spec/: Product_overview.md  about.md  backend_architecture.md  capstone_adk_agents_cli_plan.md  demo_script.md  frontend_architecture.md  ideas.md  (+4 more)
(+92 files in other folders)
