[project]
name = "social-services-copilot"
version = "0.1.0"
description = "ADK capstone agent layer for the Social Services Copilot prototype."
authors = [{ name = "Capstone Team" }]
dependencies = [
    "google-adk[eval]>=2.0.0,<2.3.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "google-cloud-logging>=3.12.0,<4.0.0"
]
requires-python = ">=3.11,<3.13"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "nest-asyncio>=1.6.0,<2.0.0"
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.0.0,<2.3.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0"
]
lint = [
    "ruff>=0.4.6,<1.0.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["discharge_agent"]
